add berita terkini

--- a/index.html
+++ b/index.html
@@ -363,6 +363,127 @@
       ></path>
     </svg>
 
+    <!-- Berita Terkini -->
+    <div class="container-fluid berita-terkini">
+      <div class="title-berita-terkini text-center">
+        <h1>BERITA TERKINI</h1>
+        <hr />
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="card mb-3" style="max-width: 540px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img
+                src="https://serangkota.go.id/po-content/uploads/img-20241016-wa0024.jpg"
+                class="img-fluid rounded-start"
+                alt="..."
+              />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Raperda APBD TA 2025</h5>
+                <hr />
+                <p class="card-text">
+                  Raperda APBD TA 2025 masih tergantung Dana Transfer Pusat1, Pj
+                  Wali Kota:"Intruksikan OPD komunikasi langsung ke
+                  Kementerian,"
+                </p>
+                <p class="card-text">
+                  <small class="text-body-secondary">16 October 2024</small>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0062.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    HIPMI Kota Serang ingin UMKM naik kelas
+                  </h5>
+                  <hr />
+                  <p class="card-text">
+                    HPMI Kota Serang ingin UMKM naik kelas, Pj Sekda Kota
+                    Serang:"UMKM masih menjadi tulang punggung,"
+                  </p>
+                  <p class="card-text">
+                    <small class="text-body-secondary">18 October 2024</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0004.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    Pemkot bentuk Tim Intelejen Pajak Daerah
+                  </h5>
+                  <hr />
+                  <p class="card-text">
+                    Dongkrak Pendapatan, Pemkot bentuk Tim Intelejen Pajak
+                    Daerah.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-body-secondary">18 October 2024</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-3" style="max-width: 540px">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img
+                  src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0062.jpg"
+                  class="img-fluid rounded-start"
+                  alt="..."
+                />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    HIPMI Kota Serang ingin UMKM naik kelas
+                  </h5>
+                  <hr />
+                  <p class="card-text">
+                    HPMI Kota Serang ingin UMKM naik kelas, Pj Sekda Kota
+                    Serang:"UMKM masih menjadi tulang punggung,"
+                  </p>
+                  <p class="card-text">
+                    <small class="text-body-secondary">18 October 2024</small>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer text-center text-lg-start mt-5">
       <div class="container">
