update berita terkini

--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
         <h1>BERITA TERKINI</h1>
         <hr />
       </div>
-      <div class="d-flex justify-content-center align-items-center">
-        <div class="card mb-3" style="max-width: 540px">
+      <div class="d-flex justify-content-center">
+        <div class="card mb-3" style="max-width: 70vw">
           <div class="row g-0">
             <div class="col-md-4">
               <img
@@ -381,14 +381,33 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Raperda APBD TA 2025</h5>
+                <h5 class="card-title">
+                  HIPMI Kota Serang ingin UMKM naik kelas, Pj Sekda Kota
+                  Serang:"UMKM masih menjadi tulang punggung,"
+                </h5>
                 <hr />
                 <p class="card-text">
-                  Raperda APBD TA 2025 masih tergantung Dana Transfer Pusat1, Pj
-                  Wali Kota:"Intruksikan OPD komunikasi langsung ke
-                  Kementerian,"
+                  Meski Kota Serang masih merupakan daerah yang mengandalkan
+                  barang dan jasa, yang bukan merupakan daerah industri.
+                  Himpunan Pengusaha Muda Indonesia (HIPMI) Kota Serang mencoba
+                  memberikan perhatian akan hal itu kepada Pemkot Serang dengan
+                  beraudiensi mencari solusi dan ikut andil dalam meningkatkan
+                  UMKM untuk naik kelas.
+                  <br />
+                  <br />
+                  Turut hadir dalam kegiatan ini Pj Sekda Kota Serang Imam Rana
+                  Hardiana, Staf Ahli Walikota Ibra Gholbi, Kepala
+                  DinkopUKMperindag sekaligus Plt Disparpora Wahyu Nurjamil,
+                  Muhamad Zidan Nugraha Ketua Bidang OKK HIPMI Kota Serang,
+                  serta jajaran lainnya di Ruang Rapat Sekda Kota Serang, Jum'at
+                  (18/10/2024).
+                  <br />
+                  <br />
+                  Melihat upaya dan rencana yang akan dilakukan oleh HIPMI Kota
+                  Serang untuk UMKM, Pj Sekda Kota Serang Imam Rana berikan
+                  apresiasi dan siap membantu.
                 </p>
-                <p class="card-text">
+                <p class="card-text text-end">
                   <small class="text-body-secondary">16 October 2024</small>
                 </p>
               </div>
@@ -405,6 +424,7 @@
                   src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0062.jpg"
                   class="img-fluid rounded-start"
                   alt="..."
+                  style="height: 230px; object-fit: cover"
                 />
               </div>
               <div class="col-md-8">
@@ -417,7 +437,7 @@
                     HPMI Kota Serang ingin UMKM naik kelas, Pj Sekda Kota
                     Serang:"UMKM masih menjadi tulang punggung,"
                   </p>
-                  <p class="card-text">
+                  <p class="card-text text-end">
                     <small class="text-body-secondary">18 October 2024</small>
                   </p>
                 </div>
@@ -433,6 +453,7 @@
                   src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0004.jpg"
                   class="img-fluid rounded-start"
                   alt="..."
+                  style="height: 230px; object-fit: cover"
                 />
               </div>
               <div class="col-md-8">
@@ -445,7 +466,7 @@
                     Dongkrak Pendapatan, Pemkot bentuk Tim Intelejen Pajak
                     Daerah.
                   </p>
-                  <p class="card-text">
+                  <p class="card-text text-end">
                     <small class="text-body-secondary">18 October 2024</small>
                   </p>
                 </div>
@@ -458,22 +479,21 @@
             <div class="row g-0">
               <div class="col-md-4">
                 <img
-                  src="https://serangkota.go.id/po-content/uploads/img-20241018-wa0062.jpg"
+                  src="https://serangkota.go.id/po-content/uploads/img-20241015-wa0048.jpg"
                   class="img-fluid rounded-start"
                   alt="..."
+                  style="height: 230px; object-fit: cover"
                 />
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">
-                    HIPMI Kota Serang ingin UMKM naik kelas
-                  </h5>
+                  <h5 class="card-title">Hari Santri Nasional tahun 2024</h5>
                   <hr />
                   <p class="card-text">
-                    HPMI Kota Serang ingin UMKM naik kelas, Pj Sekda Kota
-                    Serang:"UMKM masih menjadi tulang punggung,"
+                    Dukung Peran para Ulama & Santri, Pj Wali Kota Serang buka
+                    Launching Hari Santri Nasional tahun 2024.
                   </p>
-                  <p class="card-text">
+                  <p class="card-text text-end">
                     <small class="text-body-secondary">18 October 2024</small>
                   </p>
                 </div>
@@ -481,6 +501,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-warning">Liat Berita Lainnya</button>
       </div>
     </div>
 
