add google maps

--- a/index.html
+++ b/index.html
@@ -788,6 +788,18 @@
       ></path>
     </svg>
 
+    <div class="gmaps m-5 d-flex justify-content-center align-items-center">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31736.6347987448!2d106.1361305108398!3d-6.1200214999999965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e41f58bf07bf689%3A0x21ef78d036754865!2sDiskominfo%20Kota%20Serang!5e0!3m2!1sid!2sid!4v1729480531560!5m2!1sid!2sid"
+        width="1500"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+
     <!-- Footer -->
     <footer class="footer text-center text-lg-start mt-5">
       <div class="container">
